--- a/zadanie_7/css/style.css
+++ b/zadanie_7/css/style.css
@@ -3,111 +3,87 @@
     color: white;
 }
 
+/* Header styles */
 
-.container{
-    text-align: center;
-}
-    
-.title{
-    display: flex;
+.main-header{
     width: 100%;
+    margin: auto;
+    padding: 0;
     height: 80px;
     background-color: red;
-    justify-content: center;
+}
+.main-header h1{
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px;
 }
 
-.tresc{
-    height: 500px;
-    position: relative;
-    display: flex; 
-    align-self: flex-start;
-}
 
-.srodek{
-    width: 100%;
-    height: 500px;
-    background-color: rgb(97, 223, 245);
-}
+/* Aside styles*/
 
 .aside_left{
-    width: 20%;
     background-color: green;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    
-}
-.aside_right{
     width: 20%;
     height: 500px;
-    background-color: pink;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-self: flex-end;
-    
+    order:-1;
+    text-transform: uppercase;
 }
-
-.footer{
+.aside_right{
+    background-color: pink;
+    width: 20%;
+    height: 500px;
+    margin: 0;
+    padding: 0;
     display: flex;
-    width: 100%;
-    background-color: purple;
-    padding: 2vh;
-    justify-content: center;
+    flex-direction: column;
+    text-transform: uppercase;
+   
+    
 }
 
-@media(max-width=992px){
 
-    .container{
-        text-align: center;
-    }
-        
-    .title{
-        display: flex;
-        width: 100%;
-        height: 80px;
-        background-color: red;
-        justify-content: center;
-    }
-    
-    .tresc{
-        display: flex;
-        justify-content: flex-start;
-    }
+/* Paragraph styles */
 
-    .srodek{
-        display: flex;
-        width: 60%;
-        height: 500px;
-        background-color: rgb(97, 223, 245);
-        justify-content: flex-start;
-    }
-    
+.main{
+    background-color: blue;
+    margin: 0;
+    padding: 0;  
+    height: 500px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.main p{
+    width: 60%;
+}
+
+
+/* Footer stules */
+
+.main-footer{
+    background-color: purple;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    height: 80px;
+    padding: 30px;
+}
+
+
+/* Responsive styles */
+
+@media (max-width:992px) {
+
     .aside_left{
         width: 100%;
-        background-color: green; 
         display: flex;
-        align-items: flex-end;    
-    }
-    
-    
-    
-    .aside_right{
-        width: 40%;
-        height: 500px;
-        background-color: pink;
-        flex-direction: column;
+        order: 1;
         
     }
-    
-    .footer{
-        display: flex;
-        width: 100%;
-        background-color: purple;
-        padding: 2vh;
-        justify-content: center;
-    }
-
-
-    
 }
